fixed accordion collapse issue

--- a/homepage-section-faq.scss
+++ b/homepage-section-faq.scss
@@ -1,7 +1,7 @@
 .homepage-section {
     background-color: #fff;
 
-    #homepage-section-1-accordion {
+    #homepage-section-faq {
 
         box-shadow: 10px 10px 34px -40px rgba(0,0,0,0.19);
         -webkit-box-shadow: 10px 10px 34px -40px rgba(0,0,0,0.19);
